Fix Postman 403 by relaxing CORS and returning 401 for missing Bearer tokens.